# qml-ogdf

./: .gitignore  CMakeLists.txt
cmake/: BuildOGDF.cmake
demo/: CMakeLists.txt
demo/qml/: main.qml
ogdfplugin/: CMakeLists.txt  graphlayout.cpp
ogdfplugin/ogdf/src/ogdf/abacus/: global.cpp
